data/derived/sp14/progs/unify/prog2699.ml.out
Characters 113-131:
  |Cosine(e) -> cos(pi *. eval e,x,y)
                   ^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c
       but an expression was expected of type float
